--- a/css/styleoff.css
+++ b/css/styleoff.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #d79344 !important;
+}
+
 .grid {
   border: 1px solid;
   display: flex;
@@ -37,10 +41,6 @@
 
 .frog {
   background-color: darkgreen;
-}
-
-body {
-  background-color: #d79344;
 }
 
 .bg-micolor {
